2007-08-13  Rodrigo B. de Oliveira <rodrigobamboo@gmail.com>

	* default.build
	  Mono.Cecil/AssemblyInfo.cs:
		Ability to pass custom defines to the c# compiler through
		the csc.defines property. KEYFILE can be used to force
		an AssemblyKeyFile attribute on AssemblyInfo.cs so strongly
		signed versions of Mono.Cecil can be produced on .net 1.1,
		cf 1.0 and cf 2.0.

2007-08-13  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Cil/CilWorker.cs:
		Fix InsertBefore.

2007-08-06  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Cil/CilWorker.cs:
		Fix the linked list after an InsertBefore, InsertAfter.

2007-08-02  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/GenericParameter.cs
	  Mono.Cecil/FieldDefinition.cs
	  Mono.Cecil/TypeDefinition.cs
	  Mono.Cecil/MethodDefinition.cs
	  Mono.Cecil/EventDefinition.cs
	  Mono.Cecil/PInvokeInfo.cs
	  Mono.Cecil/Resource.cs
	  Mono.Cecil/ParameterDefinition.cs
	  Mono.Cecil/PropertyDefinition.cs:

		Add Isxxx properties based on the xxxAttributes enums.

2007-07-23  Raja R Harinath  <rharinath@novell.com>

	Fix 'make warnings'.
	* Makefile (LIBRARY_PACKAGE): Set to none.
	(install-local): Remove.

2007-07-21  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/TypeReference.cs
	  Mono.Cecil/TypeSpecification.cs:
		Add a new GetOriginalType () method.

	* Mono.Cecil/MethodReference.cs
	  Mono.Cecil/MethodSpecification.cs:
		Add a new GetOriginalMethod () method.

2007-07-19  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/AssemblyFactory.cs
	  Mono.Cecil.Binary/Image.cs:
		Update the fileinfo after writing an assembly
		to a file.

2007-07-19  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/ReflectionReader.cs
	  Mono.Cecil.Cil/CodeReader.cs
	  Mono.Cecil.Signature/SignatureReader.cs:
		Better handling of the sentil in the varargs methods.

	* Mono.Cecil/ReflectionReader.cs
	  Mono.Cecil/SentinelType.cs
	  Mono.Cecil.Cil/CodeWriter.cs:
	  Mono.Cecil.Signatures/SignatureReader.cs:
		Fix handling of varargs methods.
